# adblogger

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  LeftPanel.tsx  LogcatPanel.tsx  RightPanel.tsx  ScanBar.tsx
frontend/src/components/ui/: index.tsx
frontend/src/components/views/: AlertsView.tsx  AppsView.tsx  ConnectionsView.tsx  GraphsView.tsx  PacketsView.tsx  StreamsView.tsx
frontend/src/hooks/: useNetSpy.ts
frontend/src/types/: index.ts
frontend/src/utils/: appNames.ts  filters.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: adb.rs  lib.rs  main.rs  parser.rs
