[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2" # Required for executing ADB commands
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["full"] } # Required for async tasks and streams
dotenvy = "0.15" # Required for reading .env files
regex = "1.10" # Required by parser.rs
chrono = "0.4" # Required by parser.rs for timestamps
lazy_static = "1.4" # Required by parser.rs for fast regex
